--- a/package.json
+++ b/package.json
@@ -40,11 +40,14 @@
 		"@midzer/tobii": "^2.3.3",
 		"@naourass/gulp-html-engine": "^1.0.4",
 		"@redux-devtools/extension": "^3.2.2",
+		"just-animate": "^2.6.2",
 		"lightgallery": "^2.3.0",
 		"lodash-es": "^4.17.21",
 		"micromodal": "^0.4.10",
 		"mustache": "^4.2.0",
 		"pjax-api": "^3.34.0",
+		"polymorph-js": "^1.0.2",
+		"popmotion": "^11.0.3",
 		"redux": "^4.2.0",
 		"redux-subscribe-action": "^2.1.3",
 		"redux-thunk": "^2.4.1",
