--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"lodash-es": "^4.17.21",
 		"micromodal": "^0.4.10",
 		"mustache": "^4.2.0",
+		"nouislider": "^15.6.0",
 		"pjax-api": "^3.34.0",
 		"polymorph-js": "^1.0.2",
 		"popmotion": "^11.0.3",
