Cверстал страницу поиска, поиск в шапке, много правок

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"babel-polyfill": "^6.26.0",
 		"clean-webpack-plugin": "^4.0.0",
 		"core-js": "^3.20.3",
+		"ftp-deploy": "^2.4.2",
 		"gulp": "^3.9.1",
 		"gulp-autoprefixer": "^5.0.0",
 		"gulp-cheerio": "^0.6.3",
@@ -30,7 +31,9 @@
 		"gulp-sourcemaps": "^2.6.4",
 		"gulp-svg-sprites": "^4.1.2",
 		"gulp-tinypng-compress": "^1.2.1",
+		"gulp-util": "^3.0.8",
 		"gulp-webp": "^3.0.0",
+		"vinyl-ftp": "^0.6.1",
 		"webpack": "^4.20.2",
 		"webpack-cli": "^3.1.2",
 		"webpack-stream": "^5.1.1"
@@ -40,6 +43,7 @@
 		"@midzer/tobii": "^2.3.3",
 		"@naourass/gulp-html-engine": "^1.0.4",
 		"@redux-devtools/extension": "^3.2.2",
+		"cookies-js": "^1.2.3",
 		"just-animate": "^2.6.2",
 		"lightgallery": "^2.3.0",
 		"lodash-es": "^4.17.21",
