--- a/package.json
+++ b/package.json
@@ -36,26 +36,21 @@
 		"vinyl-ftp": "^0.6.1",
 		"webpack": "^4.20.2",
 		"webpack-cli": "^3.1.2",
-		"webpack-stream": "^5.1.1"
+		"webpack-stream": "^5.1.1",
+		"@naourass/gulp-html-engine": "^1.0.4"
 	},
 	"browserslist": "last 2 years, > 0.25%, not dead",
 	"dependencies": {
 		"@midzer/tobii": "^2.3.3",
-		"@naourass/gulp-html-engine": "^1.0.4",
-		"@redux-devtools/extension": "^3.2.2",
 		"cookies-js": "^1.2.3",
 		"just-animate": "^2.6.2",
 		"lightgallery": "^2.3.0",
 		"lodash-es": "^4.17.21",
 		"micromodal": "^0.4.10",
-		"mustache": "^4.2.0",
+		"normalize-wheel-es": "^1.1.2",
 		"nouislider": "^15.6.0",
-		"pjax-api": "^3.34.0",
 		"polymorph-js": "^1.0.2",
 		"popmotion": "^11.0.3",
-		"redux": "^4.2.0",
-		"redux-subscribe-action": "^2.1.3",
-		"redux-thunk": "^2.4.1",
 		"swiper": "^8.1.4"
 	}
 }
